--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,8 +15,8 @@
         <%})%>
       </ul>
       <form id="form" >
-        <input type="text" name="newItem" >
-        <button id="btn" type="submit" name="submit">Add Item</button>
+        <input type="text" name="newItem" placeholder="enter task here" autocomplete="off">
+        <button id="btn" type="submit" name="submit">Add</button>
       </form>
     </div>
 
